# ParserGen

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh
.github/workflows/: build-and-test.yml
bench/: CMakeLists.txt  dfa.cpp  intset.cpp  re.cpp
include/core/: common.h  dfa.h  nfa.h  re.h
include/util/: casting.h
src/: dot_gen.cpp  show_dfa.cpp
src/core/: cast.hpp  common.hpp  dfa.cpp  dfa.hpp  err.hpp  nfa.cpp  re.cpp  re.hpp
test/: CMakeLists.txt  dfa.cpp  intset.cpp  nfa.cpp  re.cpp
